# proc-view

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: MemoryRegion.cpp  MemoryRegion.h  Process.cpp  Process.h  ProcessAnalyzer.cpp  ProcessAnalyzer.h  System.cpp  System.h  main.cpp
src/analysis/: LuaInterface.cpp  LuaInterface.h  MemoryScanner.cpp  MemoryScanner.h  StringsFinder.cpp  StringsFinder.h
src/ui/: LuaWidget.cpp  LuaWidget.h  MemoryRegionsWidget.cpp  MemoryRegionsWidget.h  MemoryScannerWidget.cpp  MemoryScannerWidget.h  ProcDetailsWindow.cpp  ProcDetailsWindow.h  ProcListWindow.cpp  ProcListWindow.h
